--- a/Practica 3 Mi ubicación/index.html
+++ b/Practica 3 Mi ubicación/index.html
@@ -9,7 +9,9 @@
   <p>Fecha: sábado 27 de mayo de 2023</p>
   <p>Dirección: 123 Calle Principal, Ciudad</p>
 
-  <div id="map"></div>
+  <div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d465.7670027778661!2d-89.65906191637072!3d20.94705199653955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f5672547b4480ff%3A0x1a85440fb23cbde8!2sC.%2077%20710%2C%20Libertad%2C%2097256%20M%C3%A9rida%2C%20Yuc.!5e0!3m2!1ses!2smx!4v1684820024263!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 
   <form>
     <label for="nombre">Nombre completo:</label>
@@ -18,7 +20,5 @@
     <input type="submit" value="Confirmar asistencia">
   </form>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
-  <script src="script.js"></script>
 </body>
 </html>
